# rust-ffmpeg-frame-grabber

./: Cargo.toml
src/: ffprobe.rs  utils.rs
